tests/snapshots/regression-no_charge-combat_skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Tristan
ship/scanStrength                            = 9.000000
ship/passiveShieldEffectiveRechargeRate      = 1.931034
ship/passiveShieldRechargeRate               = 1.400000
ship/ehp                                     = 1970.320801
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.162500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 482.758615
ship/hullEhp                                 = 820.895502
ship/armorEhp                                = 666.666684
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/droneCapacityLoad                       = 10.000000
ship/droneActive                             = 2.000000
ship/droneDamagePerSecond                    = 19.200000
ship/damagePerSecondWithReload               = 37.312704
ship/damagePerSecondWithoutReload            = 37.474999
ship/damageAlpha                             = 86.449999
ship/powerFree                               = 20.000000
ship/cpuFree                                 = 93.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 30.000000
ship/capacitorPeakDelta                      = 1.500000
ship/capacitorPeakLoad                       = 3.500000
ship/capacitorPeakRecharge                   = 5.000000
ship/alignTime                               = 4.978682
ship/powerLoad                               = 15.000000
ship/cpuLoad                                 = 37.000000
ship/shipBonusGF                             = 0.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusGF2                            = 0.000000
ship/droneBandwidthLoad                      = 10.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

high_1/type                         = Small EMP Smartbomb I
high_1/state                        = active
high_1/damageVolley                 = 50.000000
high_1/speedWithReload              = 10000.000000
high_1/damagePerSecondWithoutReload = 5.000000
high_1/capacitorPeakLoad            = 3.000000
high_1/cycleTime                    = 10000.000000

high_2/type                         = Civilian Gatling Autocannon
high_2/state                        = active
high_2/damageVolley                 = 6.750000
high_2/speedWithReload              = 2000.000000
high_2/damagePerSecondWithoutReload = 3.375000
high_2/capacitorPeakLoad            = 0.500000
high_2/cycleTime                    = 2000.000000

high_3/type                         = 125mm Gatling AutoCannon II
high_3/state                        = active
high_3/damageVolley                 = 29.699999
high_3/speedWithReload              = 3049.999999
high_3/speedOfReload                = 49.999999
high_3/damagePerSecondWithReload    = 9.737705
high_3/damagePerSecondWithoutReload = 9.900000
high_3/chargeAmount                 = 200.000004
high_3/cycleTime                    = 3000.000000
high_3/maxRange                     = 480.000000
high_3/barrageDmgMultiplier         = 2.475000
high_3/barrageFalloff               = 4300.000000
high_3/entityFlyRange               = 250.000000
high_3/charge/type                  = EMP S

dronebay_1-2/type                         = Hobgoblin II
dronebay_1-2/state                        = active
dronebay_1-2/damageVolley                 = 38.399999
dronebay_1-2/speedWithReload              = 4000.000000
dronebay_1-2/damagePerSecondWithoutReload = 9.600000
