tests/snapshots/regression-no_charge-combat_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills)"
---
ship/type                                    = Tristan
ship/scanStrength                            = 10.800000
ship/passiveShieldEffectiveRechargeRate      = 3.218391
ship/passiveShieldRechargeRate               = 2.333333
ship/ehp                                     = 2462.901001
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.162500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 603.448268
ship/hullEhp                                 = 1026.119377
ship/armorEhp                                = 833.333355
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/droneCapacityLoad                       = 10.000000
ship/droneActive                             = 2.000000
ship/droneDamagePerSecond                    = 39.599999
ship/damagePerSecondWithReload               = 72.907573
ship/damagePerSecondWithoutReload            = 73.399478
ship/damageAlpha                             = 104.725623
ship/powerFree                               = 29.450000
ship/cpuFree                                 = 134.750000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 45.750000
ship/capacitorPeakDelta                      = 3.812500
ship/capacitorPeakLoad                       = 4.520833
ship/capacitorPeakRecharge                   = 8.333333
ship/alignTime                               = 3.360610
ship/hp                                      = 687.500000
ship/powerOutput                             = 43.750000
ship/powerLoad                               = 14.300000
ship/maxVelocity                             = 393.750000
ship/cpuOutput                               = 162.500000
ship/cpuLoad                                 = 27.750000
ship/rechargeRate                            = 131250.000000
ship/agility                                 = 2.322000
ship/maxTargetRange                          = 50000.000000
ship/scanSpeed                               = 1875.000000
ship/warpCapacitorNeed                       = 0.000001
ship/scanMagnetometricStrength               = 10.800000
ship/shieldCapacity                          = 437.500000
ship/armorHP                                 = 562.500000
ship/maxResearchGangSize                     = 30.000000
ship/shipBonusGF                             = 50.000000
ship/shieldRechargeRate                      = 468750.000000
ship/capacitorCapacity                       = 437.500000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 750.000000
ship/shipBonusGF2                            = 37.500000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/droneBandwidthLoad                      = 10.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type                         = Small EMP Smartbomb I
high_1/state                        = active
high_1/damageVolley                 = 50.000000
high_1/speedWithReload              = 7500.000000
high_1/damagePerSecondWithoutReload = 6.666667
high_1/capacitorPeakLoad            = 4.000000
high_1/cycleTime                    = 7500.000000
high_1/cpu                          = 22.500000
high_1/duration                     = 7500.000000
high_1/heatDamage                   = 5.025000

high_2/type                         = Civilian Gatling Autocannon
high_2/state                        = active
high_2/damageVolley                 = 7.762500
high_2/speedWithReload              = 1440.000000
high_2/damagePerSecondWithoutReload = 5.390625
high_2/capacitorPeakLoad            = 0.520833
high_2/cycleTime                    = 1440.000000
high_2/capacitorNeed                = 0.750000
high_2/power                        = 5.400000
high_2/cpu                          = 3.000000
high_2/speed                        = 1440.000000
high_2/maxRange                     = 937.500000
high_2/damageMultiplier             = 1.552500
high_2/falloff                      = 5000.000000
high_2/trackingSpeed                = 812.500000
high_2/heatDamage                   = 0.450000

high_3/type                         = 125mm Gatling AutoCannon II
high_3/state                        = active
high_3/damageVolley                 = 46.963123
high_3/speedWithReload              = 2209.999999
high_3/speedOfReload                = 49.999999
high_3/damagePerSecondWithReload    = 21.250282
high_3/damagePerSecondWithoutReload = 21.742187
high_3/chargeAmount                 = 200.000004
high_3/cycleTime                    = 2160.000000
high_3/power                        = 0.900000
high_3/cpu                          = 2.250000
high_3/speed                        = 2160.000000
high_3/maxRange                     = 600.000000
high_3/damageMultiplier             = 3.913594
high_3/falloff                      = 5375.000000
high_3/trackingSpeed                = 521.250000
high_3/barrageDmgMultiplier         = 3.913594
high_3/barrageFalloff               = 5375.000000
high_3/entityFlyRange               = 250.000000
high_3/heatDamage                   = 0.600000
high_3/charge/type                  = EMP S

dronebay_1-2/type                         = Hobgoblin II
dronebay_1-2/state                        = active
dronebay_1-2/damageVolley                 = 79.199998
dronebay_1-2/speedWithReload              = 4000.000000
dronebay_1-2/damagePerSecondWithoutReload = 19.800000
dronebay_1-2/hp                           = 450.000000
dronebay_1-2/maxVelocity                  = 4200.000000
dronebay_1-2/maxRange                     = 2625.000000
dronebay_1-2/damageMultiplier             = 3.960000
dronebay_1-2/trackingSpeed                = 3.267000
dronebay_1-2/shieldCapacity               = 112.500000
dronebay_1-2/armorHP                      = 202.500000
